--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -16,23 +16,29 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/kubernetes-web-application-deployment:latest
 
-    - name: Set up Kubernetes context
-      uses: azure/k8s-set-context@v3
-      with:
-        method: kubeconfig
-        kubeconfig: ${{ secrets.KUBECONFIG }}
+    # - name: Set up Kubernetes context
+    #   uses: azure/k8s-set-context@v3
+    #   with:
+    #     method: kubeconfig
+    #     kubeconfig: ${{ secrets.KUBECONFIG }}
 
-    - name: Deploy to Kubernetes
-      uses: Azure/k8s-deploy@v4
-      with:
-        manifests: |
-          ./k8s/deployment.yml
-          ./k8s/service.yml
-        images: ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+    # - name: Deploy to Kubernetes
+    #   uses: Azure/k8s-deploy@v4
+    #   with:
+    #     manifests: |
+    #       ./k8s/deployment.yml
+    #       ./k8s/service.yml
+    #     images: ${{ secrets.DOCKER_USERNAME }}/kubernetes-web-application-deployment:latest
