--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,44 +1,57 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline for Kubernetes
 
 on:
   push:
     branches:
-      - master
+      - main
+  # Trigger workflow manually
+  workflow_dispatch:
 
 jobs:
-  build:
+  # Job to Build and Push Docker Image
+  build_and_push:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/kubernetes-web-application-deployment:latest
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # - name: Set up Kubernetes context
-    #   uses: azure/k8s-set-context@v3
-    #   with:
-    #     method: kubeconfig
-    #     kubeconfig: ${{ secrets.KUBECONFIG }}
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t sivasaileo/static-portfolio-website:${{ github.sha }} .
+          docker push sivasaileo/static-portfolio-website:${{ github.sha }}
 
-    # - name: Deploy to Kubernetes
-    #   uses: Azure/k8s-deploy@v4
-    #   with:
-    #     manifests: |
-    #       ./k8s/deployment.yml
-    #       ./k8s/service.yml
-    #     images: ${{ secrets.DOCKER_USERNAME }}/kubernetes-web-application-deployment:latest
+  # Job to Deploy to Kubernetes
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up kubectl
+        uses: azure/k8s-set-context@v1
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.KUBECONFIG }}
+
+      - name: Deploy to Kubernetes
+        run: |
+          kubectl set image deployment/static-portfolio-website static-portfolio-website=sivasaileo/static-portfolio-website:${{ github.sha }} -n sivasai
+          kubectl rollout status deployment/static-portfolio-website -n sivasai
