--- a/deployment.yml
+++ b/deployment.yml
@@ -1,19 +1,42 @@
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: static-portfolio-website
+# spec:
+#   replicas: 2
+#   selector:
+#     matchLabels:
+#       app: web-app
+#   template:
+#     metadata:
+#       labels:
+#         app: web-app
+#     spec:
+#       containers:
+#         - name: static-portfolio-website
+#           image: sivasaileo/html-webpage
+#           ports:
+#             - containerPort: 80
+
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: static-portfolio-website
+  namespace: sivasai
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: web-app
+      app: static-portfolio-website
   template:
     metadata:
       labels:
-        app: web-app
+        app: static-portfolio-website
     spec:
       containers:
-        - name: static-portfolio-website
-          image: ujjwalmahar/static-portfolio-website
-          ports:
-            - containerPort: 80
+      - name: static-portfolio-website
+        image: sivasaileo/static-portfolio-website:latest
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 80
