--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline for Kubernetes
 on:
   push:
     branches:
-      - main
+      - master
   # Trigger workflow manually
   workflow_dispatch:
 
