--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -47,9 +47,11 @@ jobs:
 
       - name: Set up kubeconfig
         run: |
+          mkdir -p $HOME/.kube
           echo "$KUBECONFIG" > $HOME/.kube/config
         env:
           KUBECONFIG: ${{ secrets.KUBECONFIG }}
+      
 
       - name: Deploy to Kubernetes
         run: |
