--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -40,19 +40,18 @@ jobs:
   # Job to Deploy to Kubernetes
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up kubeconfig
-        run: |
-          echo "$KUBECONFIG" > $HOME/.kube/config
-      
+    - name: Set up kubeconfig
+      run: |
+        mkdir -p $HOME/.kube  # Ensure .kube directory exists
+        echo "$KUBECONFIG" > $HOME/.kube/config
 
-      - name: Deploy to Kubernetes
-        run: |
-          kubectl set image deployment/static-portfolio-website static-portfolio-website=sivasaileo/static-portfolio-website:${{ github.sha }} -n sivasai
-          kubectl rollout status deployment/static-portfolio-website -n sivasai
-        env:
-          KUBECONFIG: ${{ secrets.KUBECONFIG }}
+    - name: Deploy to Kubernetes
+      run: |
+        kubectl set image deployment/static-portfolio-website static-portfolio-website=sivasaileo/static-portfolio-website:latest -n sivasai
+        kubectl rollout status deployment/static-portfolio-website -n sivasai
+      env:
+        KUBECONFIG: ${{ secrets.KUBECONFIG }}
