modified cicd pipeline

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,14 +1,72 @@
+# name: CI/CD Pipeline for Kubernetes
+
+# on:
+#   push:
+#     branches:
+#       - master
+#   # Trigger workflow manually
+#   workflow_dispatch:
+
+# jobs:
+#   # Job to Build and Push Docker Image
+#   build_and_push:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v1
+
+#       - name: Cache Docker layers
+#         uses: actions/cache@v2
+#         with:
+#           path: /tmp/.buildx-cache
+#           key: ${{ runner.os }}-buildx-${{ github.sha }}
+#           restore-keys: |
+#             ${{ runner.os }}-buildx-
+
+#       - name: Log in to Docker Hub
+#         uses: docker/login-action@v2
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
+
+#       - name: Build and Push Docker Image
+#         run: |
+#           docker build -t sivasaileo/static-portfolio-website:${{ github.sha }} .
+#           docker push sivasaileo/static-portfolio-website:${{ github.sha }}
+
+#   # Job to Deploy to Kubernetes
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Set up kubeconfig
+#         run: |
+#           mkdir -p $HOME/.kube  # Ensure .kube directory exists
+#           echo "$KUBECONFIG" | base64 --decode > $HOME/.kube/config
+
+#       - name: Deploy to Kubernetes
+#         run: |
+#           kubectl set image deployment/static-portfolio-website static-portfolio-website=sivasaileo/static-portfolio-website:${{ github.sha }} -n sivasai
+#             kubectl rollout status deployment/static-portfolio-website -n sivasai
+
+#     env:
+#         KUBECONFIG: ${{ secrets.KUBECONFIG }}
+
+
 name: CI/CD Pipeline for Kubernetes
 
 on:
   push:
     branches:
       - master
-  # Trigger workflow manually
   workflow_dispatch:
 
 jobs:
-  # Job to Build and Push Docker Image
   build_and_push:
     runs-on: ubuntu-latest
     steps:
@@ -37,22 +95,23 @@ jobs:
           docker build -t sivasaileo/static-portfolio-website:${{ github.sha }} .
           docker push sivasaileo/static-portfolio-website:${{ github.sha }}
 
-  # Job to Deploy to Kubernetes
   deploy:
     runs-on: ubuntu-latest
+    needs: build_and_push
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up kubeconfig
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v1
+        with:
+          version: 'v1.18.0'
+
+      - name: Set up Kubeconfig
         run: |
-          mkdir -p $HOME/.kube  # Ensure .kube directory exists
-          echo "$KUBECONFIG" | base64 --decode > $HOME/.kube/config
+          echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
 
       - name: Deploy to Kubernetes
         run: |
           kubectl set image deployment/static-portfolio-website static-portfolio-website=sivasaileo/static-portfolio-website:${{ github.sha }} -n sivasai
-            kubectl rollout status deployment/static-portfolio-website -n sivasai
-
-    env:
-        KUBECONFIG: ${{ secrets.KUBECONFIG }}
+          kubectl rollout status deployment/static-portfolio-website -n sivasai
